@@ -7,17 +7,19 @@ import javax.faces.bean.ManagedBean;
 import javax.faces.bean.ViewScoped;
 
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 
 import ch.ivyteam.enginecockpit.services.model.Elasticsearch;
 import ch.ivyteam.enginecockpit.services.model.Elasticsearch.SearchEngineHealth;
 import ch.ivyteam.ivy.elasticsearch.IElasticsearchManager;
+import ch.ivyteam.ivy.elasticsearch.manager.impl.ElasticsearchManager;
 import ch.ivyteam.ivy.elasticsearch.server.ServerConfig;
 
 @ManagedBean
 @ViewScoped
 public class SearchEngineBean {
 
-  private IElasticsearchManager searchEngine = IElasticsearchManager.instance();
+  private ElasticsearchManager searchEngine = (ElasticsearchManager) IElasticsearchManager.instance();
   private Elasticsearch elasticSearch;
   private List<SearchEngineIndex> indices;
   private List<SearchEngineIndex> filteredIndices;
@@ -27,8 +29,21 @@ public class SearchEngineBean {
   private String queryResult;
 
   public SearchEngineBean() {
-    elasticSearch = new Elasticsearch(searchEngine.info(), searchEngine.watermark());
-    indices = SearchEngineService.instance().getIndices().collect(Collectors.toList());
+    if (!hasFailure()) {
+      elasticSearch = new Elasticsearch(searchEngine.info(), searchEngine.watermark());
+      indices = SearchEngineService.instance().getIndices().toList();
+    }
+  }
+
+  public boolean hasFailure() {
+    return searchEngine.getBundledServerStartupFailure() != null;
+  }
+
+  public String getStartupFailure() {
+    if (hasFailure()) {
+      return ExceptionUtils.getRootCauseMessage(searchEngine.getBundledServerStartupFailure());
+    }
+    return "";
   }
 
   public List<SearchEngineIndex> getFilteredIndicies() {
